# course_project_BD

./: .env.example  README.md  config.py  main.py  pyproject.toml
data/: 123.json
src/: create_db.py  dbmanager.py  hh_api.py  interface.py  utils.py
