[tool.poetry]
name = "course-project-oop-bd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
types-requests = "^2.32.0.20241016"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
types-psycopg2 = "^2.9.21.20241019"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
